--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
-    "@prisma/client": "^5.21.0",
+    "@prisma/client": "^5.21.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
@@ -20,6 +20,8 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^10.0.0",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
@@ -29,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "socket.io": "^4.8.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   }
 }
