--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
   "name": "chat",
   "module": "src/app.ts",
-  "type": "module",
+  "type": "commonjs",
+  "scripts": {
+    "dev": "concurrently \"bun run --watch src/app.ts\" \"bun run watch:build\" || concurrently \"npm run --watch src/app.ts\" \"node run watch:build\"",
+    "watch:build": "tsc --watch",
+    "build": "bun build || npm run build:default",
+    "build:default": "tsc",
+    "start": "bun dist/app.js || node dist/app.js"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@apollo/server": "^4.11.0",
-    "@prisma/client": "^5.21.1",
+    "@aws-sdk/client-s3": "^3.701.0",
+    "@apollo/server": "^4.11.2",
+    "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^1.2.1",
-    "@types/cookie-parser": "^1.4.7",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
-    "@types/express-session": "^1.18.0",
+    "@types/express-session": "^1.18.1",
     "@types/graphql": "^14.5.0",
     "@types/graphql-upload": "^16.0.7",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^10.0.0",
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "concurrently": "^9.1.0",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
@@ -30,7 +39,7 @@
     "graphql-upload": "^17.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "socket.io": "^4.8.0",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   }
