--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
     "@apollo/server": "^4.11.2",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.0.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
@@ -39,6 +39,7 @@
     "graphql-upload": "^17.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "prisma": "^6.0.1",
     "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
